--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wilfred Eiron Araga - WDD 230 - Web Frontend Development</title>
     <meta name="description"
-        content="WDD 230 - Web Frontend Development website for Wilfred Eiron Araga in https://github.com/wilfredaraga/wdd230">
+        content="WDD 230 - Web Frontend Development website for Wilfred Eiron Araga's course assignment portal.">
     <meta name="author" content="Wilfred Eiron Araga">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
