--- a/index.html
+++ b/index.html
@@ -25,19 +25,27 @@
     <header>
         <img src="images/profile.jpg" alt="Wilfred Eiron Araga Profile" width="80" height="100">
         <span>Wilfred Eiron Araga</span>
+        <img src="images/moon-sun-svgrepo-com.svg" alt="dark mode" id="mode">
     </header>
+
     <nav>
-        <a href="" class="active">Home</a>
-        <a href="">Chamber</a>
-        <a href="">Site Plan</a>
-        <a href="">Form</a>
+        <a id="menu" href="#"></a>
+        <ul class="navigation">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">Chamber</a></li>
+            <li><a href="#">Site Plan</a></li>
+            <li><a href="#">Form</a></li>
+        </ul>
     </nav>
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-                <li><a href=""></a></li>
+                <li>Week 01: <a href=""> </a></li>
+                <li>Week 02: <a href="https://codepen.io/Wilfred-Araga/pen/JjVgqzV">Responsive Hamburger Menu</a> • <a
+                        href="">Chamber Site Plan</a></li>
+
             </ul>
         </section>
         <section class="card">
