W02: Team Activity - Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <ul>
                 <li>Week 01: <a href=""> </a></li>
                 <li>Week 02: <a href="https://codepen.io/Wilfred-Araga/pen/JjVgqzV">Responsive Hamburger Menu</a> • <a
-                        href="">Chamber Site Plan</a></li>
+                        href="https://wilfredaraga.github.io/wdd230/week01/chamber-site-plan.html">Chamber Site Plan</a>
+                </li>
 
             </ul>
         </section>
