--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -41,8 +41,8 @@
                 <li>Where can I find the contact information of chamber's owner?</li>
             </ul>
         </section>
-        <section id="colorScheme">
-            <h2>Color Scheme</h2>
+        <section id="colorSchema">
+            <h2>Color Schema</h2>
             <ul>
                 <li>Navigation Background Color - #63b995</li>
                 <li>Navigation Link Color - #423e28</li>
