--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-                <li>Week 01: <a href=""> </a></li>
-                <li>Week 02: <a href="https://codepen.io/Wilfred-Araga/pen/JjVgqzV">Responsive Hamburger Menu</a> • <a
-                        href="https://wilfredaraga.github.io/wdd230/week01/chamber-site-plan.html">Chamber Site Plan</a>
+                <li>Week 01: <a href="https://wilfredaraga.github.io/wdd230/week01/chamber-site-plan.html">Chamber Site
+                        Plan</a></li>
+                <li>Week 02: <a href="https://codepen.io/Wilfred-Araga/pen/JjVgqzV">Responsive Hamburger Menu</a>
                 </li>
 
             </ul>
