Last update(May 11)

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-                <li>Week 01: <a href="https://wilfredaraga.github.io/wdd230/week01/chamber-site-plan.html">Chamber Site
-                        Plan</a></li>
+                <li>Week 01: <a href="https://wilfredaraga.github.io/wdd230/week01/chamber-site-plan.html">Project
+                        Milestone - The Chamber of Commerce Site Plan</a></li>
                 <li>Week 02: <a href="https://codepen.io/Wilfred-Araga/pen/JjVgqzV">Responsive Hamburger Menu</a>
                 </li>
 
