--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <ul>
                 <li>Week 01: <a href="https://wilfredaraga.github.io/wdd230/week01/chamber-site-plan.html">Project
                         Milestone - The Chamber of Commerce Site Plan</a></li>
-                <li>Week 02: <a href="https://codepen.io/Wilfred-Araga/pen/JjVgqzV">Responsive Hamburger Menu</a>
+                <li>Week 02: <a href="https://codepen.io/Wilfred-Araga/pen/JjVgqzV">Responsive Hamburger Menu</a> • <a
+                        href="https://wilfredaraga.github.io/wdd230/chamber/index.html">The Chamber of Commerce Home
+                        Page</a>
                 </li>
 
             </ul>
