WebP Image File Format

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         href="https://wilfredaraga.github.io/wdd230/chamber/index.html">The Chamber of Commerce Home
                         Page</a>
                 </li>
+                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
 
             </ul>
         </section>
