--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                         href="https://wilfredaraga.github.io/wdd230/chamber/index.html">The Chamber of Commerce Home
                         Page</a>
                 </li>
-                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
+                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> • <a
+                        href="https://wilfredaraga.github.io/wdd230/week03/lazyload.html">Lazy Load</a></li>
 
             </ul>
         </section>
