--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                         Page</a>
                 </li>
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> • <a
-                        href="https://wilfredaraga.github.io/wdd230/week03/lazyload.html">Lazy Load</a></li>
+                        href="https://wilfredaraga.github.io/wdd230/week03/lazyload.html">Lazy Load</a> • <a
+                        href="https://wilfredaraga.github.io/wdd230/week03/responsive-images.html">Responsive images</a>
+                </li>
 
             </ul>
         </section>
