Web Storage API - localStorage

--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -20,8 +20,8 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="images/hero-small.webp" media="(min-width: 500px)">
-                <source srcset="images/hero-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/hero-small.webp" media="(max-width: 500px)">
+                <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
                 <img src="images/hero-large.webp" alt="Manila Philippines Temple" width="1500" height="750">
             </picture>
         </div>
