--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> • <a
                         href="https://wilfredaraga.github.io/wdd230/week03/lazyload.html">Lazy Load</a> • <a
                         href="https://wilfredaraga.github.io/wdd230/week03/responsive-images.html">Responsive images</a>
+                    • <a href="https://wilfredaraga.github.io/wdd230/week03/bom.html">localStorage Activity</a>
                 </li>
 
             </ul>
