--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
         </section>
         <section class="card">
             <h2>Information</h2>
-            <p>Weather</p>
+            <div class="weather">
+                <figure>
+                    <img id="weatherIcon" src="" alt="">
+                </figure>
+                <p><span id="temp"></span></p>
+            </div>
             <p>Number of Visits: <span class="visitDisplay"></span></p>
         </section>
         <iframe
@@ -81,6 +86,8 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 
 </html>
