--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> • <a
                         href="https://wilfredaraga.github.io/wdd230/week03/lazyload.html">Lazy Load</a> • <a
                         href="https://wilfredaraga.github.io/wdd230/week03/responsive-images.html">Responsive images</a>
-                    • <a href="https://wilfredaraga.github.io/wdd230/week03/bom.html">localStorage Activity</a>
+                    • <a href="https://wilfredaraga.github.io/wdd230/week03/bom.html">localStorage Activity</a> • <a
+                        href="https://wilfredaraga.github.io/wdd230/chamber/discover.html">The Chamber Discover Page</a>
                 </li>
             </ul>
         </section>
