--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -52,6 +52,7 @@
     </nav>
     <main class="discover">
         <section class="contentImages">
+            <h2>Image Gallery</h2>
             <figure>
                 <img src="images/picture1.webp" alt="Vegetable Farm in Silang" loading="lazy" width="500" height="350">
                 <figcaption>Vegetable Farm in Silang</figcaption>
@@ -81,7 +82,7 @@
             <section>
                 <h2>Events</h2>
                 <figure>
-                    <img src="images/Corporate Event.webp" alt="Corporate Event">
+                    <img src="images/CorporateEvent.webp" alt="Corporate Event">
                     <figcaption>Corporate Event</figcaption>
                 </figure>
             </section>
@@ -91,7 +92,7 @@
             </section>
             <section class="calendar">
                 <h2>Month of May Calendar</h2>
-                <img src="images/Calendar.webp" alt="Month of May Calendar" width="300" height="160">
+                <img src="images/Calendar.webp" alt="Month of May Calendar">
             </section>
             <section class="information">
                 <h2>Information</h2>
