W04 Prepare: Learning Activities

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -82,17 +82,17 @@
             <section>
                 <h2>Events</h2>
                 <figure>
-                    <img src="images/CorporateEvent.webp" alt="Corporate Event">
+                    <img src="images/corporateEvent.webp" alt="Corporate Event">
                     <figcaption>Corporate Event</figcaption>
                 </figure>
             </section>
             <section>
                 <h2>Statistics Data</h2>
-                <img src="images/Statistics.webp" alt="Statistics Data">
+                <img src="images/statistics.webp" alt="Statistics Data">
             </section>
             <section class="calendar">
                 <h2>Month of May Calendar</h2>
-                <img src="images/Calendar.webp" alt="Month of May Calendar">
+                <img src="images/calendar.webp" alt="Month of May Calendar">
             </section>
             <section class="information">
                 <h2>Information</h2>
