--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                     • <a href="https://wilfredaraga.github.io/wdd230/week03/bom.html">localStorage Activity</a> • <a
                         href="https://wilfredaraga.github.io/wdd230/chamber/discover.html">The Chamber Discover Page</a>
                 </li>
+                <li>Week 04: <a href="https://codepen.io/Wilfred-Araga/pen/mdYOmMN">CSS Pseudo-Classes Activity</a> • <a
+                        href="images/combinators.jpg">CSS Combinators Activity</a> • <a
+                        href="https://wilfredaraga.github.io/wdd230/week04/tablebuild.html">HTML Tables for Data
+                        Presentation Activity</a> • <a
+                        href="https://wilfredaraga.github.io/wdd230/week04/index.html">HTML Forms Activity</a></li>
             </ul>
         </section>
         <section class="card">
