W04 Team Activity: Form Build

--- a/week04/Form-start/index.html
+++ b/week04/Form-start/index.html
@@ -54,8 +54,8 @@
             <fieldset>
                 <legend>Applicant Information</legend>
                 <label>First Name* <input type="text" name="fname" required></label>
-                <label>Last Name* <input type="text" name="fname" required></label>
-                <label>Phone <input type="tel" name="fname" placeholder="1235551234"></label>
+                <label>Last Name* <input type="text" name="lname" required></label>
+                <label>Phone <input type="tel" name="phone" placeholder="1235551234"></label>
                 <label>Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                 <label>Website <input type="url" name="url" placeholder="http://"></label>
             </fieldset>
