--- a/form.html
+++ b/form.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wilfred Eiron Araga - WDD 230 - Web Frontend Development</title>
-    <meta name="description"
-        content="WDD 230 - Web Frontend Development website for Wilfred Eiron Araga's course assignment portal.">
+    <title>Wilfred Eiron Araga - WDD 230 - Form Page</title>
+    <meta name="description" content="WDD 230 - Form Page for course assignment portal">
     <meta name="author" content="Wilfred Eiron Araga">
     <meta property="og:title" content="Course Assignment Portal">
     <meta property="og:type" content="website">
