--- a/form.html
+++ b/form.html
@@ -51,21 +51,21 @@
                 </label>
                 <label>Email Address* <input type="email" id="email" name="email" required
                         pattern="[a-zA-Z0-9._%+\-]+@byui\.edu" placeholder="Please enter a valid email address"></label>
-                <label>Page Rating <div id="rangevalue">1</div><input type="range" id="rating" name="rating" min="1"
-                        max="10" value="1" step="1" list="rangeValues">
-                    <datalist id="rangeValues">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </datalist>
-                </label>
+                <label>Page Rating</label>
+                <div id="rangevalue">1</div><input type="range" id="rating" name="rating" min="1" max="10" value="1"
+                    step="1" list="rangeValues">
+                <datalist id="rangeValues">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </datalist>
             </fieldset>
             <input type="submit" value="Sign in">
         </form>
