--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
                         href="https://wilfredaraga.github.io/wdd230/week04/tablebuild.html">HTML Tables for Data
                         Presentation Activity</a> • <a
                         href="https://wilfredaraga.github.io/wdd230/week04/Form-start/index.html">HTML Forms
-                        Activity</a></li> • <a href="https://wilfredaraga.github.io/wdd230/form.html">W04 Team Activity:
-                    Form Build</a></li>
+                        Activity</a> • <a href="https://wilfredaraga.github.io/wdd230/form.html">W04 Team Activity:
+                        Form Build</a>
+                </li>
             </ul>
         </section>
         <section class="card">
