--- a/form.html
+++ b/form.html
@@ -50,7 +50,7 @@
                 <label>Re-enter Your Password* <input type="password" id="password2" name="password2" required>
                 </label>
                 <label>Email Address* <input type="email" id="email" name="email" required
-                        pattern="[a-zA-Z0-9._%+\-]+@byui\.edu" placeholder="Please enter a valid email address"></label>
+                        pattern="[a-zA-Z0-9._%+\-]+@byui\.edu" title="Please enter a valid email address"></label>
                 <label>Page Rating</label>
                 <div id="rangevalue">1</div><input type="range" id="rating" name="rating" min="1" max="10" value="1"
                     step="1" list="rangeValues">
