--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                         Presentation Activity</a> • <a
                         href="https://wilfredaraga.github.io/wdd230/week04/Form-start/index.html">HTML Forms
                         Activity</a> • <a href="https://wilfredaraga.github.io/wdd230/form.html">W04 Team Activity:
-                        Form Build</a>
+                        Form Build</a> • <a href="https://wilfredaraga.github.io/wdd230/chamber/join.html">W04: Project
+                        Milestone - The Chamber Join Page</a>
                 </li>
             </ul>
         </section>
