--- a/chamber/join.html
+++ b/chamber/join.html
@@ -74,7 +74,7 @@
                 </label>
                 <label>Business/Organization's Description <textarea name="description"
                         id="description"></textarea></label>
-                <label>Timestamp <input type="hidden" id="timestamp" name="timestamp"></label>
+                <label>Timestamp <input type="hidden" id="timestamp" name="timestamp" value="date"></label>
             </fieldset>
             <input type="submit" value="Join Now">
         </form>
