--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                         Form Build</a> • <a href="https://wilfredaraga.github.io/wdd230/chamber/join.html">W04: Project
                         Milestone - The Chamber Join Page</a>
                 </li>
+                <li>Week 05: <a href="https://codepen.io/Wilfred-Araga/pen/zYQZPOp">CSS Pseudo-elements Activity</a> •
+                    <a href="https://wilfredaraga.github.io/wdd230/week05/new-ward-members.json">JSON Activity</a> •
+                    <a href="https://wilfredaraga.github.io/wdd230/week05/prophets.html">The Fetch API</a>
+                </li>
             </ul>
         </section>
         <section class="card">
