--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 </li>
                 <li>Week 05: <a href="https://codepen.io/Wilfred-Araga/pen/zYQZPOp">CSS Pseudo-elements Activity</a> •
                     <a href="https://wilfredaraga.github.io/wdd230/week05/new-ward-members.json">JSON Activity</a> •
-                    <a href="https://wilfredaraga.github.io/wdd230/week05/prophets.html">The Fetch API</a>
+                    <a href="https://wilfredaraga.github.io/wdd230/week05/prophets.html">The Fetch API</a> •
+                    <a href="https://wilfredaraga.github.io/wdd230/week05/weather.html">OpenWeatherMap Activity</a>
                 </li>
             </ul>
         </section>
