--- a/index.html
+++ b/index.html
@@ -52,42 +52,12 @@
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
-            <ul>
-                <li>Week 01: <a href="https://wilfredaraga.github.io/wdd230/week01/chamber-site-plan.html">Project
-                        Milestone - The Chamber of Commerce Site Plan</a></li>
-                <li>Week 02: <a href="https://codepen.io/Wilfred-Araga/pen/JjVgqzV">Responsive Hamburger Menu</a> • <a
-                        href="https://wilfredaraga.github.io/wdd230/chamber/index.html">The Chamber of Commerce Home
-                        Page</a>
-                </li>
-                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> • <a
-                        href="https://wilfredaraga.github.io/wdd230/week03/lazyload.html">Lazy Load</a> • <a
-                        href="https://wilfredaraga.github.io/wdd230/week03/responsive-images.html">Responsive images</a>
-                    • <a href="https://wilfredaraga.github.io/wdd230/week03/bom.html">localStorage Activity</a> • <a
-                        href="https://wilfredaraga.github.io/wdd230/chamber/discover.html">The Chamber Discover Page</a>
-                </li>
-                <li>Week 04: <a href="https://codepen.io/Wilfred-Araga/pen/mdYOmMN">CSS Pseudo-Classes Activity</a> • <a
-                        href="images/combinators.jpg">CSS Combinators Activity</a> • <a
-                        href="https://wilfredaraga.github.io/wdd230/week04/tablebuild.html">HTML Tables for Data
-                        Presentation Activity</a> • <a
-                        href="https://wilfredaraga.github.io/wdd230/week04/Form-start/index.html">HTML Forms
-                        Activity</a> • <a href="https://wilfredaraga.github.io/wdd230/form.html">W04 Team Activity:
-                        Form Build</a> • <a href="https://wilfredaraga.github.io/wdd230/chamber/join.html">W04: Project
-                        Milestone - The Chamber Join Page</a>
-                </li>
-                <li>Week 05: <a href="https://codepen.io/Wilfred-Araga/pen/zYQZPOp">CSS Pseudo-elements Activity</a> •
-                    <a href="https://wilfredaraga.github.io/wdd230/week05/new-ward-members.json">JSON Activity</a> •
-                    <a href="https://wilfredaraga.github.io/wdd230/week05/prophets.html">The Fetch API</a> •
-                    <a href="https://wilfredaraga.github.io/wdd230/week05/weather.html">OpenWeatherMap Activity</a>
-                </li>
-            </ul>
+            <ul id="acitity"></ul>
         </section>
         <section class="card">
             <h2>Information</h2>
             <div class="weather">
-                <figure>
-                    <img id="weatherIcon" src="" alt="">
-                </figure>
-                <p><span id="temp"></span></p>
+                <p><img id="weatherIcon" src="" alt=""> <span id="temp"></span> - <span id="description"></span></p>
             </div>
             <p>Number of Visits: <span class="visitDisplay"></span></p>
         </section>
