--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
-            <ul id="acitity"></ul>
+            <ul id="activity"></ul>
         </section>
         <section class="card">
             <h2>Information</h2>
