--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="card">
             <h2>Information</h2>
             <div class="weather">
-                <p><img id="weatherIcon" src="" alt=""> <span id="temp"></span> - <span id="description"></span></p>
+                <p><img id="weatherIcon" src="#" alt="#"> <span id="temp"></span> - <span id="description"></span></p>
             </div>
             <p>Number of Visits: <span class="visitDisplay"></span></p>
         </section>
