--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -60,6 +60,7 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/index.js"></script>
+    <script src="scripts/members.js"></script>
 </body>
 
 </html>
