--- a/chamber/join.html
+++ b/chamber/join.html
@@ -143,6 +143,7 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/index.js"></script>
+    <script src="scripts/timestamp.js"></script>
 </body>
 
 </html>
