--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -49,7 +49,7 @@
         </ul>
         <div class="contactUs"><button>Contact Us</button></div>
     </nav>
-    <main>
+    <main id="directory">
         <div id="displayMode"><img id="grid" src="images/grid.svg" alt="Grid Mode" width="30"> <img id="list"
                 src="images/listmode.svg" alt="List Mode" width="30"></div>
         <div id="displayCompanies"></div>
