--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silang Chamber of Commerce Site Plan</title>
-    <meta name="description" content="Chamber Site Plan home page that promote businesses in Silang">
+    <title>Silang Chamber of Commerce Site Plan Directory Page</title>
+    <meta name="description"
+        content="Chamber Site Plan directory page that shows the members of this chamber and information about their company">
     <meta name="author" content="Wilfred Eiron Araga">
     <meta property="og:title" content="Silang Chamber of Commerce Site Plan">
     <meta property="og:type" content="website">
