--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -42,10 +42,10 @@
             <input type="button" value="🔍">
         </div>
         <ul class="navigation">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Discover</a></li>
-            <li><a href="#">Directory</a></li>
-            <li><a href="#">Join</a></li>
+            <li><a href="https://wilfredaraga.github.io/wdd230/chamber/index.html">Home</a></li>
+            <li><a href="https://wilfredaraga.github.io/wdd230/chamber/discover.html">Discover</a></li>
+            <li><a href="https://wilfredaraga.github.io/wdd230/chamber/directory.html">Directory</a></li>
+            <li><a href="https://wilfredaraga.github.io/wdd230/chamber/join.html">Join</a></li>
         </ul>
         <div class="contactUs"><button>Contact Us</button></div>
     </nav>
